tests/paczka1/fuzzy1/29377938.err
Error in line 2: lwtd6GkB A742 36,1
Error in line 13: bb5khK7h A620 78,8
Error in line 15: UB2 A620 56,6
Error in line 17: UB2 S935 74,5
Error in line 23: sd7 A620 84,07
Error in line 27: bb5khK7h A742 22,2
Error in line 33: sd7 A620 288,4
